--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,151 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #161a22 !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#header {
+  height: 100vh;
+}
+
+.font-weight-bold {
+  font-weight: 700;
+}
+
+.grey {
+  color: #939ba6;
+}
+
+.red {
+ color: #E50914;
+}
+
+.red-line {
+  background: #E50914;
+  width: 50%;
+  height: 1px !important;
+  opacity: 1;
+}
+
+.content {
+  max-width: 764px;
+}
+
+#experience .container {
+  max-width: 1000px;
+}
+
+.experience-area .experience {
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+  border: 1px solid #dee2e6;
+  border-radius: 6px;
+}
+.experience-area .experience:hover {
+  -webkit-box-shadow: 0 0 6px 5px #ddd;
+  box-shadow: 0 0 6px 5px #ddd;
+  border-radius: 6px;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+  border: 1px solid #dee2e6;
+}
+.experience-area .experience .exp-img {
+  position: relative;
+}
+.experience-area .experience .exp-img:before {
+  background: rgba(0,0,0,0.6);
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+  z-index: 5;
+}
+.experience-area .experience .exp-img:hover:before {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+.experience-area .experience .exp-img img {
+  width: 100%;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.experience-area .experience .exp-info {
+  text-align: center;
+  padding: 30px 0;
+}
+.experience-area .experience .exp-info h3 {
+  font-size: 20px;
+  line-height: 20px;
+  margin-bottom: 5px;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+  text-transform: capitalize;
+}
+.experience-area .experience .exp-info p {
+  font-size: 15px;
+  margin-bottom: 0;
+}
+
+.experience-area .experience .exp-img p {
+  position: absolute;
+  display: inline-block;
+  top: 10%;
+  left: 12%;
+  width: 80%;
+  opacity: 0;
+  transition: all 0.4s;
+  font-size: 18px;
+}
+
+.experience-area .experience .exp-img:hover p {
+  /*left: 35%;*/
+  opacity: 1;
+  z-index: 9;
+}
+.experience-area .experience .exp-img:hover p:before {
+  opacity: 1;
+}
+
+#skills {
+  background: #141619;
+}
+
+#skills .content {
+  max-width: 1080px;
+}
+
+#skills ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none
+}
+
+.skill {
+  flex: 1 1;
+}
+
+.icon {
+  font-size: 2rem;
+  color: #E50914;
+  display: inline-block;
+  width: 100% !important;
+  text-align: center;
 }
